[build-system]
requires = ["setuptools", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "metis_backend"
dynamic = ["version", "readme", "dependencies"]
description = "Metis infra utility toolset and CRUD-server for materials informatics"
authors = [{name = "Evgeny Blokhin", email = "eb@tilde.pro"}]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AiiDA",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
keywords = ["materials informatics", "materials platform", "nanotechnology", "virtual laboratory"]
requires-python = ">=3.8"

[project.urls]
Home = "https://github.com/basf/metis-backend"
Issues = "https://github.com/basf/metis-backend/issues"
Source = "https://github.com/basf/metis-backend"

[tool.setuptools]
packages = ["metis_backend", "metis_backend.structures", "metis_backend.calculations", "metis_backend.datasources", "metis_backend.phaseid"]

[tool.setuptools.dynamic]
version = {attr = "metis_backend.__version__"}
readme = {file = ["README.rst"]}
dependencies = {file = ["requirements.txt"]}
